Fixed bug (resume contents overflowing)

--- a/ePortfolio/portfolio_layout.css
+++ b/ePortfolio/portfolio_layout.css
@@ -10,7 +10,7 @@ Description: CSS file for mainly resume page layout
 {
     background-color: white;
     width: 70%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
